--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,15 @@
 		    <ul class="nav navbar-nav">
 	        <li><%= link_to "New Post", new_post_path %></li>
 	      </ul>
+	      <ul class="nav navbar-nav navbar-right">
+	      	<% if signed_in? %>
+	      		<li><%= link_to "Account", current_user %></li>
+	      		<li><%= link_to "Sign out", signout_path %></li>
+	      	<% else %>
+	      		<li><%= link_to "Sign in", signin_path %></li>
+	      		<li><%= link_to "Sign up", signup_path %></li>
+	      	<% end %>
+	     	</ul>
       </div>
 
     </div>
