--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,24 +1,38 @@
-<%= form_for current_user, class: "form-group" do |f| %>
-	
-	<div class="form-group">
-		<%= f.label :email %>
-		<%= f.text_field :email, class: "form-control" %>
-	</div>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for current_user, class: "form-group" do |f| %>
+			
+			<div class="form-group">
+				<%= f.label :email %>
+				<%= f.text_field :email, class: "form-control" %>
+			</div>
 
-	<div class="form-group">
-		<%= f.label :name %>
-		<%= f.text_field :name, class: "form-control" %>
-	</div>
+			<div class="form-group">
+				<%= f.label :name %>
+				<%= f.text_field :name, class: "form-control" %>
+			</div>
 
-	<div class="form-group">
-		<%= f.label :password %>
-		<%= f.password_field :password, class: "form-control" %>
-	</div>
+			<div class="form-group">
+				<%= f.label :password %>
+				<%= f.password_field :password, class: "form-control" %>
+			</div>
 
-	<div class="form-group">
-		<%= f.label :password_confirmation %>
-		<%= f.password_field :password_confirmation, class: "form-control" %>
-	</div>
+			<div class="form-group">
+				<%= f.label :password_confirmation %>
+				<%= f.password_field :password_confirmation, class: "form-control" %>
+			</div>
 
-	<%= f.submit "Sign up!", class: "btn btn-default" %>
-<% end %>
+			<div class="row">
+				
+				<div class="col-md-4">
+					<%= f.submit "Save", class: "btn btn-default" %>
+				</div>
+				
+				<div class="col-md-4 col-md-offset-4">
+					<%= link_to "Delete account", user_path, method: :delete %>
+				</div>
+
+			</div>
+		<% end %>
+	</div>
+</div>
