Add flash and error messages. Add posts pagination.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,3 +2,4 @@
 	<%= render 'posts/summary', post: post %>
 	<p>Posted by <%= link_to post.user.name, post.user %></p>
 <% end %>
+<%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
