--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,18 @@
 
 	<%= render 'layouts/header' %>
 
-	<div class="container col-md-8 col-md-offset-2">
+	<div class="col-md-8 col-md-offset-2", id="content">
+				
+		<% flash.each do |name, msg| %>
+			<%= content_tag :div, msg, class: "alert alert-#{name}" %>
+		<% end %>
 
 		<%= yield %>
 
 	</div>
 
 	<%= render 'layouts/footer' %>
+
 
 </body>
 </html>
