--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,15 @@
 <%= form_for @post, class: "form-group" do |f| %>
 
+	<%= render 'shared/error_messages', object: @post %>
+
 	<div class="form-group">
 		<%= f.text_field :title, class: "form-control" %>
 	</div>
+
 	<div class="form-group">
 		<%= f.text_area :body, size: "60x20", class: "form-control" %> </br>
 	</div>
+
 	<%= f.submit "Save it!", class: "btn btn-default" %>
 
 <% end %>
