--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,8 @@
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for current_user, class: "form-group" do |f| %>
 			
+			<%= render 'shared/error_messages', object: @user %>
+
 			<div class="form-group">
 				<%= f.label :email %>
 				<%= f.text_field :email, class: "form-control" %>
