--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container-fluid">
 
-	<%= render 'layouts/header' %>
+		<%= render 'layouts/header' %>
 
-	<div class="col-md-8 col-md-offset-2", id="content">
-				
-		<% flash.each do |name, msg| %>
-			<%= content_tag :div, msg, class: "alert alert-#{name}" %>
-		<% end %>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2", id="content">
+						
+				<% flash.each do |name, msg| %>
+					<%= content_tag :div, msg, class: "alert alert-#{name}" %>
+				<% end %>
 
-		<%= yield %>
+				<%= yield %>
+
+			</div>
+		</div>
+
+		<div class="row", id="debug">
+			<%= debug(params) if Rails.env.development? %>
+		</div>
+
+		<%= render 'layouts/footer' %>
 
 	</div>
-
-	<%= render 'layouts/footer' %>
-
-
 </body>
 </html>
