--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,3 +6,13 @@
 	<%= link_to "Edit", edit_post_path %>
 	<%= link_to "Delete", post_path, method: :delete %>
 <% end %>
+
+
+<h3>Comments</h3>
+
+<%= render 'comments/form' %>
+
+<% @comments.each do |comment| %>
+	<%= render comment %>
+<% end %>
+<%= will_paginate @comments, renderer: BootstrapPagination::Rails %>
