--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,17 +1,1 @@
-<%= form_for @post, class: "form-group" do |f| %>
-
-	<%= render 'shared/error_messages', object: @post %>
-
-	<div class="form-group">
-		<%= f.text_field :title, placeholder: "Title",class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		<%= f.text_area :body, placeholder: "Content", size: "60x20", class: "form-control" %> </br>
-	</div>
-
-	<%= f.submit "Save it!", class: "btn btn-default" %>
-
-<% end %>
-
-
+<%= render "posts/form" %>
