--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_for @post, class: "form-group", html: { multipart: true } do |f| %>
-	
+
 	<%= render 'shared/error_messages', object: @post %>
 
 	<div class="form-group">
 		<%= f.text_field :title, placeholder: "Title", class: "form-control" %>
 	</div>
 
-	<div class="form-group">
-		<%= f.text_area :body, placeholder: "Content", size: "60x20", class: "form-control" %> </br>
-	</div>
+	<%= f.text_area :body, :class => "redactor", rows: 100 %>
 
+	<!--
+	<% if false %>
 	<div class="container-fluid">
 		<div class="thumbnails" id="img_thumbnails">
 			<% @post.pictures.each_slice(3) do |pic_slice| %>
@@ -31,6 +31,8 @@
 			<%= file_field_tag "images[]", type: :file, multiple: true, slyle: "display: none;", id: "imgInp" %>
 		</label>
 	</div>
+	<% end %>
+	-->
 
 	<%= f.submit "Save it!", class: "btn btn-default" %>
 
