--- a/app/views/posts/_summary.html.erb
+++ b/app/views/posts/_summary.html.erb
@@ -1,2 +1,2 @@
 <h3><%= link_to post.title, post %></h3>
-<p><%= truncate post.body, length: 100 %></p>
+<p><%= truncate strip_tags(post.body), length: 100 %></p>
