--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,7 +1,7 @@
-<h1>Welcome to Blog, <%= @user.name %>!</h1>
+<h1>Hello, <%= @user.name %>!</h1>
 
 <p>
-  Before you start <%= link_to "verify your email", edit_password_reset_url(@user.password_reset_token) %> please.
+  <%= link_to "Password reset link", edit_password_reset_url(@user.password_reset_token) %>
 </p>
 
 <p>
