--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,4 +1,6 @@
-Welcome to Blog!
+Hello, <%= @user.name %>
 
-Before you start verify your email please.
+Password reset link:
 <%= edit_password_reset_url(@user.password_reset_token) %>
+
+If you did not request your password to be reset, just ignore this email and your password will continue to stay the same.
