--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for current_user, class: "form-group" do |f| %>
-			
-			<%= render 'shared/error_messages', object: @user %>
+
+			<%= render 'shared/error_messages', object: current_user %>
 
 			<div class="form-group">
 				<%= f.label :email %>
@@ -25,11 +25,11 @@
 			</div>
 
 			<div class="row">
-				
+
 				<div class="col-md-4">
 					<%= f.submit "Save", class: "btn btn-default" %>
 				</div>
-				
+
 				<div class="col-md-4 col-md-offset-4">
 					<%= link_to "Delete account", user_path, method: :delete %>
 				</div>
